# lizard

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: calculator.c.925BEE245BCF2765.idx  calculator.h.2FEC0B9C5F212567.idx  main.c.ECA5C58B8E290E6B.idx
include/: batchingRender.h  camera.h  character.h  frameController.h  polygon.h  ui.h  vector.h
src/: batchingRender.c  camera.c  character.c  frameController.c  main.c  polygon.c  ui.c  vector.c
